--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,6 +7,6 @@ jobs:
       - run: echo "this is a test"
       - uses: actions/checkout@v2
       - run: |
-          ls -la
-          pwd
-          cd .git
+          ls -al
+          cd .github/workflows/
+          ls -al
