add pull request

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,4 +6,4 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${github.event.action}
+      - run: echo "this is a test"
