--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,9 +5,9 @@ on:
       opened,
       synchronize,
       reopened,
-      closed,
+      # closed,
       ready_for_review,
-      unlocked,
+      # unlocked,
       review_requested,
       review_request_removed,
       labeled,
@@ -15,12 +15,12 @@ on:
       edited,
       assigned,
       unassigned,
-      milestoned,
-      demilestoned,
+      # milestoned,
+      # demilestoned,
       auto_merge_enabled,
       auto_merge_disabled,
-      locked,
-      unlocked
+      # locked,
+      # unlocked
     ]
     paths:
       - src/**
