--- a/sample/pull_request_target.yml
+++ b/sample/pull_request_target.yml
@@ -21,10 +21,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 100
-          ref: ${{ github.head_ref }}
-
+        fetch-depth: 100
+        ref: ${{ github.head_ref }}
+      - run: echo "${github.event.action}"
       - run: echo "${github.repository_owner}"
+      - run: echo "${github.event.action}"
+      - run: echo "${github.event.action}"
 
       # - id: ready_for_review
       #   if: github.event.action == 'ready_for_review'
