Update GitHub Actions workflow to trigger on pull requests

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,7 +1,7 @@
 name: pull-request-target
 
 on:
-  pull_request_target:
+  pull_request:
     types: [
       opened,
       synchronize,
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - if: github.event.action == 'labeled'
         run: echo "labeled"
 
