--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -32,9 +32,9 @@ jobs:
 
   comment-review:
     if: |
-      github.event.review_requester != null &&
       contains(github.event.pull_request.labels.*.name, 'review') &&
-      !contains(github.event.pull_request.labels.*.name, 'draft')
+      !contains(github.event.pull_request.labels.*.name, 'draft') &&
+      github.event.pull_request.review_requested != null &&
 
     # github.event.pull_request.reviewers != null
 
