--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,27 +8,27 @@ on:
       - unlabeled
 
 jobs:
-  sample-job:
-    if: |
-      contains(github.event.pull_request.labels.*.name, 'draft') ||
-      contains(github.event.pull_request.labels.*.name, 'review')
+  # sample-job:
+    # if: |
+    #   contains(github.event.pull_request.labels.*.name, 'draft') ||
+    #   contains(github.event.pull_request.labels.*.name, 'review')
 
-    runs-on: ubuntu-latest
-    steps:
-      - name: labeled
-        uses: actions/checkout@v2
+    # runs-on: ubuntu-latest
+    # steps:
+    #   - name: labeled
+    #     uses: actions/checkout@v2
 
-      - if: contains(github.event.pull_request.labels.*.name, 'draft')
-        run: echo "includes draft"
+    #   - if: contains(github.event.pull_request.labels.*.name, 'draft')
+    #     run: echo "includes draft"
 
-      - if: contains(github.event.pull_request.labels.*.name, 'review')
-        run: echo "includes review"
+    #   - if: contains(github.event.pull_request.labels.*.name, 'review')
+    #     run: echo "includes review"
 
-      - if: contains(github.event.label.name, 'review')
-        run: echo "labeled review"
+    #   - if: contains(github.event.label.name, 'review')
+    #     run: echo "labeled review"
 
-      - if: contains(github.event.label.name, 'draft')
-        run: echo "labeled draft"
+    #   - if: contains(github.event.label.name, 'draft')
+    #     run: echo "labeled draft"
 
   comment-review:
     if: |
