--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,7 +34,7 @@ jobs:
     if: |
       contains(github.event.pull_request.labels.*.name, 'review') &&
       !contains(github.event.pull_request.labels.*.name, 'draft') &&
-      github.event.pull_request.review_requested != null &&
+      github.event.pull_request.review_requested != null
 
     # github.event.pull_request.reviewers != null
 
