Update run.yml to include review label in workflow conditions

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -38,10 +38,17 @@ jobs:
         (
           github.event.action == 'review_requested' &&
           !contains(github.event.pull_request.labels.*.name, 'draft')
+          contains(github.event.pull_request.labels.*.name, 'review')
         ) ||
         (
           github.event.action == 'unlabeled' &&
           contains(github.event.label.name, 'draft')
+          contains(github.event.pull_request.labels.*.name, 'review')
+        ) ||
+        (
+          github.event.action == 'labeled' &&
+          contains(github.event.label.name, 'review')
+          !contains(github.event.pull_request.labels.*.name, 'draft')
         )
       )
 
