--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,12 +6,15 @@ on:
       - review_requested
       - labeled
       - unlabeled
+      - assigned
 
 jobs:
   auto-check-review:
     if: |
-      contains(github.event.pull_request.labels.*.name, 'draft') ||
-      contains(github.event.pull_request.labels.*.name, 'review')
+      (
+        contains(github.event.pull_request.labels.*.name, 'draft') ||
+        contains(github.event.pull_request.labels.*.name, 'review')
+      )
 
     runs-on: ubuntu-latest
     steps:
@@ -37,7 +40,10 @@ jobs:
       github.event.pull_request.assignees != null &&
       (
         (
-          github.event.action == 'review_requested' &&
+          (
+            github.event.action == 'review_requested' ||
+            github.event.action == 'assigned'
+          ) &&
           !contains(github.event.pull_request.labels.*.name, 'draft') &&
           contains(github.event.pull_request.labels.*.name, 'review')
         ) ||
