--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,7 +1,7 @@
 name: pull-request-review
 
 on:
-  pull_request_target:
+  pull_request:
     types:
       - synchronize
       - labeled
@@ -26,7 +26,8 @@ jobs:
     name: checker / eslint
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -54,7 +55,8 @@ jobs:
     name: checker / misspell
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      contents: read
+      pull-requests: write
     steps:
       - name: Check out code.
         uses: actions/checkout@v2
