Enable CI/CD for src directory

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,9 +7,8 @@ on:
       - labeled
       - assigned
       - opened
-      - reopened
-    # paths:
-    #   - 'src/**'
+    paths:
+      - 'src/**'
 
 jobs:
 
