--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,15 +15,14 @@ on:
       - step*
 
 jobs:
-
-  eslint:
+  check:
     if: >
       github.event.pull_request.assignee != null &&
       (
         contains(github.event.pull_request.labels.*.name, 'draft') ||
         contains(github.event.pull_request.labels.*.name, 'review')
       )
-    name: checker / eslint
+    name: checker
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -34,35 +33,15 @@ jobs:
         with:
           node-version: "16"
       - run: npm install --legacy-peer-deps
-      - uses: reviewdog/action-eslint@v1
+      - name: Run eslint
+        uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.github_token }}
           node_options: "--max_old_space_size=8192"
           reporter: github-check
           workdir: "./"
           eslint_flags: "--no-eslintrc -c .eslintrc.json src/"
-
-  misspell:
-    if: >
-      github.event.pull_request.assignee != null &&
-      (
-        contains(fromJson('["synchronize", "assigned", "labeled"]'), github.event.action) &&
-        (
-          contains(github.event.pull_request.labels.*.name, 'draft') ||
-          contains(github.event.pull_request.labels.*.name, 'review')
-        )
-      )
-    name: checker / misspell
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-    steps:
-      - name: Check out code.
-        uses: actions/checkout@v2
-      - name: misspell
+      - name: Check misspell
         uses: reviewdog/action-misspell@v1
         with:
-          node-version: "16"
           github_token: ${{ secrets.github_token }}
-          locale: "US"
