--- a/sample/review/review.yml
+++ b/sample/review/review.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           node_options: "--max_old_space_size=8192"
-          reporter: github-check
+          reporter: github-pr-review
           workdir: "./"
           eslint_flags: "--no-eslintrc -c .eslintrc.json src/"
 
