--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -64,3 +64,4 @@ jobs:
         uses: reviewdog/action-misspell@v1
         with:
           github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
